# askbit

./: .gitignore  Makefile  README.md  cli.py  pyproject.toml  requirements.txt
askbit/: main.py
core/: bitencoder.py  classifier.py  encoder.py  glove_loader.py
data/: faq.json
services/: faq.py  logger.py
